# komodo-defi-framework

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.aarch64-linux-android  Dockerfile.armv7-linux-androideabi  Dockerfile.i686-linux-android  Dockerfile.x86_64-linux-android  MM_DATETIME  README.md  android-ndk.sh  apply_mm_err.py  azure-pipelines-android-job.yml  azure-pipelines-build-stage-job.yml  azure-pipelines-ios-job.yml  azure-pipelines-job.yml  azure-pipelines-lint-stage-job.yml  azure-pipelines-wasm-stage-job.yml  azure-pipelines.yml  build.rs  clippy.toml  deny.toml  rust-toolchain.toml  scan_for_mm_errs.py  suggestions.txt
mm2src/adex_cli/: Cargo.toml
mm2src/adex_cli/src/: adex_app.rs  adex_config.rs  app.rs  cli.rs  data.rs  helpers.rs  main.rs  rpc_data.rs  transport.rs
mm2src/adex_cli/src/activation_scheme/: activation_scheme.rs  activation_scheme_impl.rs  init_activation_scheme.rs  mod.rs
mm2src/adex_cli/src/activation_scheme_db/: mod.rs
mm2src/adex_cli/src/api_commands/: adex_cli_conf.rs  adex_proc.rs  api_data.rs  assets_operations.rs  data.rs  mod.rs  printer.rs  protocol_data.rs  response.rs  response_handler.rs  service_operations.rs  smart_fraction_fmt.rs  utils.rs
mm2src/adex_cli/src/scenarios/: init_coins.rs  init_mm2_cfg.rs  mm2_proc_mng.rs  mod.rs
mm2src/adex_cli/src/tests/: mod.rs
mm2src/coins_activation/: Cargo.toml
mm2src/coins_activation/src/: bch_with_tokens_activation.rs  context.rs  erc20_token_activation.rs  eth_tokens_activation.rs  eth_with_token_activation.rs  init_erc20_token_activation.rs  init_token.rs  l2.rs  lib.rs  lightning_activation.rs  platform_coin_with_tokens.rs  prelude.rs  sia_coin_activation.rs  slp_token_activation.rs  solana_token_activation.rs  solana_with_assets.rs  solana_with_tokens_activation.rs  spl_token_activation.rs  tendermint_token_activation.rs  tendermint_with_assets_activation.rs  token.rs  z_coin_activation.rs
mm2src/coins_activation/src/l2/: init_l2.rs  init_l2_error.rs  mod.rs
mm2src/coins_activation/src/standalone_coin/: init_standalone_coin.rs  init_standalone_coin_error.rs  mod.rs
mm2src/coins_activation/src/utxo_activation/: common_impl.rs  init_bch_activation.rs  init_qtum_activation.rs  init_utxo_standard_activation.rs  init_utxo_standard_activation_error.rs  init_utxo_standard_statuses.rs  utxo_standard_activation_result.rs
mm2src/common/: Cargo.toml  build.rs  common.rs  crash_reports.rs  custom_iter.rs  dht.cc  event_dispatcher.rs  expirable_map.rs  fmt.rs  for_c.rs  for_tests.rs  grpc_web.rs  iguana_utils.rs  ip_addr.rs  jsonrpc_client.rs  log.rs  mm_ctx.rs  number_type_casting.rs  privkey.rs  time_cache.rs  wasm.rs
mm2src/common/android/: nanomsg.mk  user-config-armv8.jam  user-config.jam
mm2src/common/custom_futures/: repeatable.rs
mm2src/common/custom_futures/repeatable/: mod.rs  with_attempts.rs  with_timeout.rs
mm2src/common/executor/: abort_on_drop.rs  abortable_spawner.rs  mod.rs  native_executor.rs  spawner.rs  wasm_executor.rs
mm2src/common/executor/abortable_system/: abortable_queue.rs  mod.rs  simple_map.rs
mm2src/common/indexed_db/: be_big_uint.rs  db_driver.rs  db_lock.rs  indexed_cursor.rs  indexed_db.rs
mm2src/common/indexed_db/drivers/: object_store.rs  transaction.rs  upgrader.rs
mm2src/common/ios/: user-config.jam
mm2src/common/log/: native_log.rs  wasm_log.rs
mm2src/common/mm_metrics/: native.rs
mm2src/common/patterns/: repeatable.rs  state_machine.rs
mm2src/common/tests/: for_tests.rs
mm2src/common/transport/: native_http.rs  transport.rs  wasm_http.rs
mm2src/crypto/: Cargo.toml
mm2src/crypto/src/: bip32_child.rs  crypto_ctx.rs  decrypt.rs  encrypt.rs  global_hd_ctx.rs  hw_client.rs  hw_ctx.rs  hw_error.rs  hw_rpc_task.rs  key_derivation.rs  lib.rs  metamask_ctx.rs  mnemonic.rs  privkey.rs  shared_db_id.rs  slip21.rs  standard_hd_path.rs  xpub.rs
mm2src/db_common/: Cargo.toml
mm2src/db_common/src/: lib.rs  sql_condition.rs  sql_constraint.rs  sql_create.rs  sql_delete.rs  sql_insert.rs  sql_query.rs  sql_update.rs  sqlite.rs
mm2src/gossipsub/: Cargo.toml
mm2src/gossipsub/src/: behaviour.rs
mm2src/gui_storage/: Cargo.toml
mm2src/gui_storage/src/: context.rs  rpc_commands.rs
mm2src/gui_storage/src/account/: mod.rs
mm2src/hw_common/: Cargo.toml
mm2src/hw_common/src/: primitives.rs
mm2src/hw_common/src/transport/: hid_driver.rs  libusb.rs  mod.rs  webusb_driver.rs
mm2src/kdf_walletconnect/: Cargo.toml
mm2src/kdf_walletconnect/src/: chain.rs  client.rs  connection_handler.rs  error.rs  lib.rs
mm2src/kdf_walletconnect/src/client/: connection.rs  fetch.rs  inbound.rs  options.rs  outbound.rs  stream.rs
mm2src/kdf_walletconnect/src/session/: mod.rs
mm2src/kdf_walletconnect/src/storage/: indexed_db.rs
mm2src/ledger/: Cargo.toml
mm2src/ledger/src/: error.rs
mm2src/ledger/src/transport/: apdu.rs
mm2src/mm2_bitcoin/keys/: Cargo.toml
mm2src/mm2_bitcoin/keys/src/: address.rs  lib.rs  (+4 more)
mm2src/mm2_bitcoin/rpc/: Cargo.toml
mm2src/mm2_bitcoin/spv_validation/: Cargo.toml
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_core/src/: ctx_send_and_receive.rs  data_asker.rs  lib.rs  mm_ctx.rs
mm2src/mm2_db/: Cargo.toml
mm2src/mm2_db/src/: lib.rs
mm2src/mm2_eth/: Cargo.toml
mm2src/mm2_eth/src/: eip712_encode.rs
mm2src/mm2_io/: Cargo.toml
mm2src/mm2_io/src/: file_lock.rs  fs.rs  lib.rs
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_net/src/: grpc_web.rs  ip_addr.rs  komodo_proxy.rs  lib.rs  native_http.rs  network_event.rs  p2p.rs  transport.rs  wasm_event_stream.rs  wasm_http.rs  wasm_ws.rs
mm2src/mm2_rpc/: Cargo.toml
mm2src/mm2_rpc/src/: lib.rs  mm_protocol.rs
mm2src/trading_api/: Cargo.toml
mm2src/trading_api/src/: lib.rs  one_inch_api.rs
mm2src/trezor/: Cargo.toml
mm2src/trezor/src/: client.rs  device_info.rs  error.rs  lib.rs  response.rs  response_processor.rs  result_handler.rs  trezor_rpc_task.rs
mm2src/walletconnect/: Cargo.toml
mm2src/walletconnect/src/: client.rs  error.rs  lib.rs  websocket_client.rs
(+879 files in other folders)
