[workspace]
# https://doc.rust-lang.org/beta/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"
members = [
    "mm2src/coins_activation",
    "mm2src/coins",
    "mm2src/coins/utxo_signer",
    "mm2src/common/shared_ref_counter",
    "mm2src/crypto",
    "mm2src/db_common",
    "mm2src/derives/enum_derives",
    "mm2src/derives/ser_error_derive",
    "mm2src/derives/ser_error",
    "mm2src/hw_common",
    "mm2src/mm2_bin_lib",
    "mm2src/mm2_bitcoin/chain",
    "mm2src/mm2_bitcoin/crypto",
    "mm2src/mm2_bitcoin/keys",
    "mm2src/mm2_bitcoin/primitives",
    "mm2src/mm2_bitcoin/rpc",
    "mm2src/mm2_bitcoin/script",
    "mm2src/mm2_bitcoin/serialization_derive",
    "mm2src/mm2_bitcoin/serialization",
    "mm2src/mm2_bitcoin/test_helpers",
    "mm2src/mm2_core",
    "mm2src/mm2_db",
    "mm2src/mm2_err_handle",
    "mm2src/mm2_eth",
    "mm2src/mm2_event_stream",
    "mm2src/mm2_git",
    "mm2src/mm2_gui_storage",
    "mm2src/mm2_io",
    "mm2src/mm2_main",
    "mm2src/mm2_metamask",
    "mm2src/mm2_metrics",
    "mm2src/mm2_net",
    "mm2src/mm2_number",
    "mm2src/mm2_p2p",
    "mm2src/mm2_rpc",
    "mm2src/mm2_state_machine",
    "mm2src/proxy_signature",
    "mm2src/rpc_task",
    "mm2src/trezor",
    "mm2src/trading_api",
]

exclude = [
    "mm2src/adex_cli",
    "mm2src/mm2_test_helpers",
]

[workspace.dependencies]
async-std = "1.5"
async-trait = "0.1"
async-stream = { version = "0.3" }
base64 = "0.21.2"
base58 = "0.2.0"
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
bitcoin_hashes = "0.11"
blake2b_simd = { version = "0.5.10" }
bytes = "1.1"
byteorder = "1.3"
chrono = { version = "0.4.23" }
cfg-if = "1.0"
cosmrs = { version = "0.16", default-features = false }
crossbeam = "0.8"
compatible-time = { version = "1.1.0", package = "web-time" }
derive_more = "0.99"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
ethabi = { version = "17.0.0" }
ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
# Waiting for https://github.com/rust-lang/rust/issues/54725 to use on Stable.
#enum_dispatch = "0.1"
futures = { version = "0.3.1", default-features = false }
futures01 = { version = "0.1", package = "futures" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-ticker = "0.0.3"
group = "0.8.0"
gstuff = { version = "0.7", features = ["nightly"] }
hex = "0.4.2"
http = "0.2"
itertools = "0.10"
# Same version as `web3` depends on.
jsonrpc-core = "18.0.0"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
metrics = { version = "0.21" }
metrics-util = { version = "0.15" }
mocktopus = { version = "0.8.0" }
nom = "6.1.2"
num-traits = "0.2"
rustc-hex = "2"
serde = { version = "1", default-features = false }
serde_derive= { version = "1", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }

[profile.release]
debug = 0
debug-assertions = false
opt-level = 3
strip = true
codegen-units = 1
# lto = true
panic = 'unwind'

[profile.dev]
opt-level = 0
debug = 1
debug-assertions = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release.package.mocktopus]
opt-level = 1 # TODO: MIR fails on optimizing this dependency, remove that..
