[workspace]
# https://doc.rust-lang.org/beta/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"
members = [
    "mm2src/coins_activation",
    "mm2src/coins",
    "mm2src/coins/utxo_signer",
    "mm2src/common/shared_ref_counter",
    "mm2src/crypto",
    "mm2src/db_common",
    "mm2src/derives/enum_derives",
    "mm2src/derives/ser_error_derive",
    "mm2src/derives/ser_error",
    "mm2src/hw_common",
    "mm2src/mm2_bin_lib",
    "mm2src/mm2_bitcoin/chain",
    "mm2src/mm2_bitcoin/crypto",
    "mm2src/mm2_bitcoin/keys",
    "mm2src/mm2_bitcoin/primitives",
    "mm2src/mm2_bitcoin/rpc",
    "mm2src/mm2_bitcoin/script",
    "mm2src/mm2_bitcoin/serialization_derive",
    "mm2src/mm2_bitcoin/serialization",
    "mm2src/mm2_bitcoin/test_helpers",
    "mm2src/mm2_core",
    "mm2src/mm2_db",
    "mm2src/mm2_err_handle",
    "mm2src/mm2_eth",
    "mm2src/mm2_event_stream",
    "mm2src/mm2_git",
    "mm2src/mm2_gui_storage",
    "mm2src/mm2_io",
    "mm2src/mm2_main",
    "mm2src/mm2_metamask",
    "mm2src/mm2_metrics",
    "mm2src/mm2_net",
    "mm2src/mm2_number",
    "mm2src/mm2_p2p",
    "mm2src/mm2_rpc",
    "mm2src/mm2_state_machine",
    "mm2src/proxy_signature",
    "mm2src/rpc_task",
    "mm2src/trezor",
    "mm2src/trading_api",
]

exclude = [
    "mm2src/adex_cli",
    "mm2src/mm2_test_helpers",
]

[workspace.dependencies]
anyhow = "1.0"
async-std = "1.5"
async-trait = "0.1"
async-stream = { version = "0.3" }
base64 = "0.21.2"
base58 = "0.2.0"
bigdecimal = { version = "0.3", features = ["serde"] }
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
bitcoin = "0.29"
bitcoin_hashes = "0.11"
blake2 = "0.10.6"
blake2b_simd = { version = "0.5.10" }
bytes = "1.1"
byteorder = "1.3"
clap = { version = "4.2", features = ["derive"] }
chrono = { version = "0.4.23" }
cfg-if = "1.0"
cosmrs = { version = "0.16", default-features = false }
crossbeam = "0.8"
compatible-time = { version = "1.1.0", package = "web-time" }
derive_more = "0.99"
directories = "5.0"
dirs = "1"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
env_logger = "0.9.3"
ethabi = { version = "17.0.0" }
ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
# Waiting for https://github.com/rust-lang/rust/issues/54725 to use on Stable.
#enum_dispatch = "0.1"
ff = "0.8"
fnv = "1.0.6"
# using select macro requires the crate to be named futures, compilation failed with futures03 name
futures = { version = "0.3.1", default-features = false }
futures01 = { version = "0.1", package = "futures" }
futures-rustls = "0.24"
futures-ticker = "0.0.3"
futures-timer = "3.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
group = "0.8.0"
gstuff = { version = "0.7", features = ["nightly"] }
hex = "0.4.2"
http = "0.2"
http-body = "0.4"
httparse = "1.8.0"
hyper = "0.14.26"
hyper-rustls = { version = "0.24", default-features = false }
indexmap = "1.7.0"
itertools = "0.10"
jubjub = "0.5.1"
js-sys = "0.3.27"
# Same version as `web3` depends on.
jsonrpc-core = "18.0.0"
lazy_static = "1.4"
libc = "0.2"
libp2p = { git = "https://github.com/KomodoPlatform/rust-libp2p.git", tag = "k-0.52.12", d.workspace = true }
lightning = "0.0.113"
lightning-net-tokio = "0.0.113"
log = "0.4"
metrics = { version = "0.21" }
metrics-util = { version = "0.15" }
mocktopus = { version = "0.8.0" }
nom = "6.1.2"
num-bigint = { version = "0.4", features = ["serde", "std"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
parking_lot = { version = "0.12.0", default-features = false }
parking_lot_core = { version = "0.6", features = ["nightly"] }
paste = "1.0"
primitive-types = "0.11.1"
prost = "0.12"
protobuf = "2.20"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1"
reqwest = { version = "0.11.9", default-features = false, features = ["json"] }
rand = { version = "0.7", default-features = false, features = ["std", "small_rng", "wasm-bindgen"] }
rlp = "0.5"
rmp-serde = "0.14.3"
rustc-hash = "2.0"
rustc-hex = "2"
rust-ini = { version = "0.13" }
rustls = "0.21"
secp256k1 = "0.20"
serde = { version = "1", default-features = false }
serde_bytes = "0.11.5"
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
serde_with = "1.14.0"
serde_repr = "0.1.6"
serde-wasm-bindgen = "0.4.3"
sha2 = "0.10"
sha3 = "0.9"
sia-rust = { git = "https://github.com/KomodoPlatform/sia-rust", rev = "9f188b80b3213bcb604e7619275251ce08fae808" }
smallvec = "1.6.1"
syn = "1.0"
# using the same version as cosmrs
tendermint-rpc = { version = "0.35", default-features = false }
thiserror = "1.0.30"
time = "0.3.20"
timed-map = { version = "1.3", features = ["rustc-hash", "wasm"] }
tokio-tungstenite-wasm = { git = "https://github.com/KomodoPlatform/tokio-tungstenite-wasm", rev = "d20abdb", defautl-features = false, features = ["rustls-tls-native-roots"]}
tonic = { version = "0.10" }
tower-service = "0.3"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }
void = "1.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.21"
wasm-bindgen-test = "0.3.2"
web-sys = {version = "0.3.55", default-features = false }
# we don't need the default web3 features at all since we added our own web3 transport using shared httparse.workspace = true instance.
# one of web3 dependencies is the old `tokio-uds 0.1.7` which fails cross-compiling to arm.
# we don't need the default web3 features at all since we added our own web3 transport using shared hyper instance.
web3 = { git = "https://github.com/komodoplatform/rust-web3", tag = "v0.20.0", default-features = false }
winapi = "0.3"
zbase32 = "0.1.2"
zcash_client_backend = { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2" }
zcash_client_sqlite = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2" }
zcash_extras = { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2" }
zcash_primitives =  { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2", features = ["transparent-inputs"] }
zcash_proofs = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2", default-features = false, features = ["local-prover", "multicore"] }

[profile.release]
debug = 0
debug-assertions = false
opt-level = 3
strip = true
codegen-units = 1
# lto = true
panic = 'unwind'

[profile.dev]
opt-level = 0
debug = 1
debug-assertions = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release.package.mocktopus]
opt-level = 1 # TODO: MIR fails on optimizing this dependency, remove that..
