[package]
name = "adex-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rozhkov Dmitrii <rozhkov@komodoplatform.com>"]
description = "Provides a CLI interface and facilitates interoperating to komodo atomic dex through the mm2 service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-trait = "0.1.68"
clap = { version = "4.2", features = ["derive"] }
cli-table = { version = "0.4", default-features = false, features = ["derive", "title"]}
common = { path = "../common" }
derive_more = "0.99"
directories = "5.0"
env_logger = "0.7.1"
gstuff = { version = "=0.7.4" , features = [ "nightly" ]}
http = "0.2"
inquire = "0.6"
log = "0.4"
mm2_net = { path = "../mm2_net" }
passwords = "3.1"
serde = "1.0"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
sysinfo = "0.28"
tiny-bip39 = "0.8.0"
tokio = { version = "1.20", features = [ "macros" ] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
fork = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.3", features = ["processthreadsapi", "winnt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockall = "0.11.4"
