[package]
name = "crypto"
version = "1.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
aes = "0.8.3"
argon2 = { version = "0.5.2", features = ["zeroize"] }
arrayref = "0.3"
async-trait.workspace = true
base64.workspace = true
bip32.workspace = true
bip39 = { version = "2.0.0", features = ["rand_core", "zeroize"], default-features = false }
bitcrypto = { path = "../mm2_bitcoin/crypto" }
bs58 = "0.4.0"
cbc = "0.1.2"
cipher = "0.4.4"
common = { path = "../common" }
derive_more.workspace = true
enum_derives = { path = "../derives/enum_derives" }
enum-primitive-derive = "0.2"
futures.workspace = true
hex.workspace = true
hmac = "0.12.1"
http.workspace = true
hw_common = { path = "../hw_common" }
keys = { path = "../mm2_bitcoin/keys" }
lazy_static.workspace = true
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
num-traits = "0.2"
parking_lot = { workspace = true, features = ["nightly"] }
primitives = { path = "../mm2_bitcoin/primitives" }
rpc = { path = "../mm2_bitcoin/rpc" }
rpc_task = { path = "../rpc_task" }
rustc-hex.workspace = true
secp256k1.workspace = true
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde.workspace = true
serde_derive.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
sha2.workspace = true
trezor = { path = "../trezor" }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cfg-if.workspace = true
mm2_eth = { path = "../mm2_eth" }
mm2_metamask = { path = "../mm2_metamask" }
wasm-bindgen-test.workspace = true
web3 = { workspace = true, default-features = false }


[dev-dependencies]
cfg-if.workspace = true
tokio = { version = "1.20", default-features = false }

[features]
trezor-udp = ["trezor/trezor-udp"]
