[package]
name = "db_common"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
common = { path = "../common" }
hex.workspace = true
log.workspace = true
uuid.workspace = true 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5.1"
futures.workspace = true
rusqlite = { version = "0.28", features = ["bundled"] }
sql-builder = "3.1.1"
tokio = { version = "1.20", default-features = false, features = ["macros"] }
