[package]
name = "gui_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
common = { path = "../common" }
crypto = { path = "../crypto" }
db_common = { path = "../db_common" }
derive_more = "0.99"
mm2_db = { path = "../mm2_db" }
mm2_core = { path = "../mm2_core", features = ["gui-storage"] }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_number = { path = "../mm2_number" }
serde = "1.0"
serde_json = "1.0"
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
