[package]
name = "hw_common"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
bip32.workspace = true
common = { path = "../common" }
mm2_err_handle = { path = "../mm2_err_handle" }
derive_more.workspace = true
futures = { workspace = true, features = ["compat", "async-await"] }
secp256k1 = { version = "0.20", features = ["rand"] }
serde.workspace = true
serde_derive.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
rusb = { version = "0.7.0", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.1" }
web-sys = { version = "0.3.55", features = ["console", "Navigator", "Usb", "UsbDevice", "UsbDeviceRequestOptions", "UsbInTransferResult"] }
