[package]
name = "kdf_walletconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
common = { path = "../common" }
data-encoding = "2.6.0"
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "wasmbind",
] }
derive_more = "0.99"
enum_derives = { path = "../derives/enum_derives" }
futures = { version = "0.3", package = "futures", features = [
    "compat",
    "async-await",
] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
http = "1.0.0"
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
pin-project = "1.1.2"
url = "2.3"
relay_rpc = { git = "https://github.com/borngraced/WalletConnectRust.git" }
rand = { version = "0.8.5", features = ["std", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
tokio = { version = "1.22", features = ["sync", "macros"] }
tokio-tungstenite-wasm = { git = "https://github.com/KomodoPlatform/tokio-tungstenite-wasm.git", rev = "8fc7e2f", features = [
    "rustls-tls-native-roots",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.86"
wasm-bindgen-test = { version = "0.3.2" }
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["WebSocket"] }
