[package]
name = "ledger"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait.workspace = true
byteorder = "1.3.2"
common = { path = "../common" }
derive_more.workspace = true
futures = { workspace = true, features = ["compat", "async-await"] }
hw_common = { path = "../hw_common" }
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.1" }
web-sys = { version = "0.3.55" }
