[package]
name = "mm2_eth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
ethabi.workspace = true
ethkey.workspace = true
hex.workspace = true
indexmap = "1.7.0"
itertools.workspace = true
mm2_err_handle = { path = "../mm2_err_handle" }
secp256k1 = { version = "0.20", features = ["recovery"] }
serde.workspace = true
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", default-features = false }
