[package]
name = "mm2_io"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-std = { workspace = true, features = ["unstable"] }
common = { path = "../common" }
mm2_err_handle = { path = "../mm2_err_handle" }
serde = "1"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
futures = { workspace = true, features = ["compat", "async-await", "thread-pool"] }
derive_more.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gstuff = { version = "0.7", features = ["nightly"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gstuff = { version = "0.7", features = ["nightly"] }
