[package]
name = "mm2_net"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[features]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
cfg-if.workspace = true
common = { path = "../common" }
derive_more.workspace = true
ethkey.workspace = true
futures = { workspace = true, features = ["compat", "async-await", "thread-pool"] }
gstuff.workspace = true
http.workspace = true
lazy_static.workspace = true
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_number = { path = "../mm2_number" }
prost = "0.12"
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
serde.workspace = true
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
thiserror = "1.0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.21.7"
futures-util.workspace = true
mm2_state_machine = { path = "../mm2_state_machine"}
http-body = "0.4"
httparse = "1.8.0"
js-sys = "0.3.27"
pin-project = "1.1.2"
tonic = { version = "0.10", default-features = false, features = ["prost", "codegen"] }
tower-service = "0.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-test = { version = "0.3.2" }
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["console", "CloseEvent", "DomException", "ErrorEvent", "IdbDatabase",
    "IdbCursor", "IdbCursorWithValue", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbObjectStore",
    "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbKeyRange", "IdbTransaction", "IdbTransactionMode",
    "IdbVersionChangeEvent", "MessageEvent", "MessagePort", "ReadableStreamDefaultReader", "ReadableStream", "SharedWorker", "Url", "WebSocket"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3" }
hyper = { version = "0.14.26", features = ["client", "http2", "server", "tcp", "stream"] }
rustls = { version = "0.21", default-features = false }
tokio = { version = "1.20" }
tokio-rustls = { version = "0.24", default-features = false }
