[package]
name = "trezor"
version = "0.1.1"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
byteorder.workspace = true
common = { path = "../common" }
derive_more.workspace = true
futures = { workspace = true, features = ["compat", "async-await"] }
hw_common = { path = "../hw_common" }
mm2_err_handle = { path = "../mm2_err_handle" }
prost = "0.12"
rand = { version = "0.7", features = ["std", "wasm-bindgen"] }
rpc_task = { path = "../rpc_task" }
serde.workspace = true
serde_derive.workspace = true
ethcore-transaction.workspace = true
ethereum-types.workspace = true
ethkey.workspace = true
bip32.workspace = true
lazy_static.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bip32.workspace = true
async-std.workspace = true 

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.1" }
web-sys = { version = "0.3.55" }

[features]
trezor-udp = [] # use for tests to connect to trezor emulator over udp
