[package]
name = "walletconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
common = { path = "../common" }
derive_more = "0.99"
enum_derives = { path = "../derives/enum_derives" }
http = "1.0.0"
relay_rpc = { git = "https://github.com/borngraced/WalletConnectRust.git" }
rand = { version = "0.8.5", features = ["std", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "wasmbind",
] }
url = "2.3"
pin-project = "1.1.2"
data-encoding = "2.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-channel = "0.3"
tokio-tungstenite = "0.21.0"
tokio = { version = "1.20", features = ["rt", "time", "sync", "macros"] }
tokio-rustls = { version = "0.24", default-features = false }
tokio-stream = "0.1"
tokio-util = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.86"
wasm-bindgen-test = { version = "0.3.2" }
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["WebSocket"] }
