[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[lib]
doctest = false

[dependencies]
rustc-hex.workspace = true
base58.workspace = true
bech32.workspace = true
bitcrypto = { path = "../crypto" }
derive_more.workspace = true
lazy_static.workspace = true
rand = { version = "0.6", features = ["wasm-bindgen"] }
primitives = { path = "../primitives" }
secp256k1 = { workspace = true, features = ["rand", "recovery"] }
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
