[package]
name = "rpc"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[lib]
doctest = false

[dependencies]
log = "0.4.17"
serde.workspace = true
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
serde_derive.workspace = true
rustc-hex.workspace = true

serialization = { path = "../serialization" }
chain = { path = "../chain" }
primitives = { path = "../primitives" }
keys = { path = "../keys" }
script = { path = "../script" }

[dev-dependencies]
lazy_static.workspace = true
