[package]
name = "spv_validation"
version = "0.1.0"
authors = ["Roman Sztergbaum <rmscastle@gmail.com>"]

[dependencies]
chain = {path = "../chain"}
primitives = { path = "../primitives" }
ripemd160 = "0.9.0"
serialization = { path = "../serialization" }
sha2 = "0.9"
rustc-hex = "2"

[dev-dependencies]
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"